# SimpleMeteoStation

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  arm-none-eabi-gcc-toolchain.cmake
application/: CMakeLists.txt
application/config/: app-config.h
application/configuration/: app-config.h  logger-config.h
application/includes/application/core/: application.h  core.h
application/includes/application/data/abstract/: logger.h
application/includes/application/data/configurations/: log-level-limits-configuration.h
application/includes/application/data/enums/: log-level.h
application/includes/application/interfaces/: iclock.h  idisplay.h  isensor.h  isleep.h
application/includes/application/io/: logger.h  logger.inl
application/sources/abstract/: planned-task.h
application/sources/controllers/: display-controller.cpp  display-controller.h
application/sources/core/: application.cpp  core.cpp  tasks-manager.cpp  tasks-manager.h  tasks-manager.inl
application/sources/data/: planned-task.h
application/sources/interfaces/: itask.h
application/sources/tasks/: get-and-print-measures-task.h  init-screen-task.h  task.h  task.inl
application/tests/: CMakeLists.txt  core-test.cpp  logger-tests.cpp  task-manager-tests.cpp  task-tests.cpp
application/tests/mocks/: clock-mock.cpp  clock-mock.h  display-mock.h  display-mock.inl  logger-mock.cpp  logger-mock.h  output-mock.cpp  output-mock.h  sensor-mock.h  sensor-mock.inl  sleep-mock.cpp  sleep-mock.h
application/tests/utils/: console-logger.cpp  console-logger.h
drivers/bmp280/: CMakeLists.txt
drivers/bmp280/includes/bmp280/: sensor.h
drivers/bmp280/includes/bmp280/abstract/interfaces/: icommunication-bus.h
drivers/bmp280/includes/bmp280/data/: measurement-data.h  power-mode.h
drivers/bmp280/sources/: sensor.cpp
ext-libs/cmsis/stm/: system_stm32f1xx.c
libs/bmp2-sensor-api/: CMakeLists.txt
libs/cmsis/: CMakeLists.txt
libs/cmsis/cmsis/stm/: stm32f103xb.h
middleware/: CMakeLists.txt
middleware/includes/middleware/collections/: circuit-buffer.h  circuit-buffer.inl
middleware/includes/middleware/data/configurations/: logger-configuration.h
middleware/includes/middleware/data/enums/: log-level.h  return-codes.h
middleware/includes/middleware/enums/: return-codes.h
middleware/includes/middleware/interfaces/: iclock.h  idisplay.h  ioutput.h  isensor.h  isleep.h
middleware/includes/middleware/io/: logger.h  logger.inl
targets/stm/stm32f103xB/: CMakeLists.txt
targets/stm/stm32f103xB/config/: bmp280-config.h  device-config.h  logger-config.h
targets/stm/stm32f103xB/data/: gpio-configuration.h
targets/stm/stm32f103xB/data/constants/: gpio_constants.h
targets/stm/stm32f103xB/data/enums/: lock-state.h
targets/stm/stm32f103xB/data/enums/gpio/: pin-configuration.h  pin-mode.h
targets/stm/stm32f103xB/sources/: main.cpp
targets/stm/stm32f103xB/sources/adapters/: sensor-adapter.cpp  sensor-adapter.h
targets/stm/stm32f103xB/sources/core/: power-driver.cpp  power-driver.h  rcc-driver.cpp  rcc-driver.h
targets/stm/stm32f103xB/sources/data/: gpio-configuration.h  sensor-type.h
targets/stm/stm32f103xB/sources/data/constants/: gpio_constants.h
targets/stm/stm32f103xB/sources/data/enums/: i2c-direction.h  i2c-status-codes.h  lock-state.h
targets/stm/stm32f103xB/sources/data/enums/gpio/: pin-configuration.h  pin-mode.h
targets/stm/stm32f103xB/sources/io/: gpio-driver.cpp  gpio-driver.h  i2c-driver.cpp  i2c-driver.h  uart-driver.cpp  uart-driver.h
targets/stm/stm32f103xB/sources/memory/: dma-driver.cpp  dma-driver.h  dma-driver.inl
targets/stm/stm32f103xB/sources/timers/: rtc-driver.cpp  rtc-driver.h  system-timer.cpp  system-timer.h
targets/stm/stm32f103xB/sources/utils/: uart-logger.cpp  uart-logger.h
targets/stm32f103/: CMakeLists.txt
toolchains/: arm-none-eabi-gcc-toolchain.cmake  gcc-toolchains-general-flags.cmake  linux-x86-gcc-toolchain.cmake
